--- a/configuration/calendars.yaml
+++ b/configuration/calendars.yaml
@@ -1,1 +1,9 @@
 calendar:
+  - platform: entities_calendar
+    calendars:
+      - name: Bin Collection
+        entities:
+          - entity: sensor.bin_collection_data
+            name: Bin Collection
+            start_time:
+              timestamp_attribute: date
