Add Upstairs Downstairs Groups for lights

--- a/configuration/light.yaml
+++ b/configuration/light.yaml
@@ -11,6 +11,20 @@ light:
       - light.study
       - light.toilet
   - platform: group
+    name: Downstairs
+    entities:
+      - light.entrance
+      - light.kitchen
+      - light.lounge
+      - light.toilet
+  - platform: group
+    name: Upstairs
+    entities:
+      - light.bathroom
+      - light.bedroom
+      - light.hall
+      - light.study
+  - platform: group
     name: Bathroom
     entities:
       - light.bathroom_lamp
