--- a/automations/home/rubbish_collection_reminder.yaml
+++ b/automations/home/rubbish_collection_reminder.yaml
@@ -10,7 +10,10 @@ trigger:
       'date'),'%Y-%m-%dT%H:%M:%SZ') - timedelta( hours = 5 )).strftime( '%Y-%m-%d,
       %H:%M')) }}"
 
-condition: []
+condition:
+  - condition: state
+    entity_id: input_boolean.home_automations
+    state: "on"
 
 action:
   - service: notify.mobiles
