--- a/automations/lounge/lights.yaml
+++ b/automations/lounge/lights.yaml
@@ -11,7 +11,10 @@ trigger:
   - entity_id: binary_sensor.lounge_bright
     platform: state
 
-condition: []
+condition:
+  - condition: state
+    entity_id: input_boolean.lounge_automations
+    state: "on"
 
 action:
   - choose:
