--- a/configuration/o365_personal.yaml
+++ b/configuration/o365_personal.yaml
@@ -1,4 +1,4 @@
 o365:
-  client_secret: !secret o365_personal_client_id
-  client_id: !secret o365_personal_secret
+  client_secret: !secret o365_personal_secret
+  client_id: !secret o365_personal_client_id
   alt_auth_flow: true
