--- a/themes/home/home.yaml
+++ b/themes/home/home.yaml
@@ -83,3 +83,5 @@ Home:
   mini-media-player-overlay-color-stop: 25%
   mini-media-player-overlay-color: rgba(0,0,0,0.7)
   # mini-media-player-artwork-opacity: 0.7  # causing some bug
+  iron-overlay-backdrop-filter: 'blur(10px) grayscale(50%)'
+  iron-overlay-backdrop-background-color: 'rgba(41,128,185,0.25)'
