--- a/binary_sensors/bayesian.yaml
+++ b/binary_sensors/bayesian.yaml
@@ -1,41 +1,4 @@
 ####################################
-# Presence Binary Sensors
-####################################
-- platform: template
-  sensors:
-    shower_occupied:
-      friendly_name: "Shower Occupied"
-      device_class: occupancy
-      value_template: >-
-        {{ (states('sensor.bathroom_multisensor_humidity')| float > (states('sensor.bathroom_humidity_statistics')| float + states('input_number.bathroom_humidity_offset')| float)) and states('binary_sensor.bathroom_humidity_trend') }}
-
-####################################
-# People Home Binary Sensors
-####################################
-- platform: template
-  sensors:
-    people_home:
-      friendly_name: "People Home"
-      icon_template: "mdi:home"
-      device_class: presence
-      value_template: >-
-        {{ is_state('person.laura_ward', 'home') or is_state('person.sebastian_burrell', 'home') }}
-
-####################################
-# Sleeping Binary Sensors
-####################################
-- platform: template
-  sensors:
-    laura_sleeping:
-      friendly_name: "Laura Sleeping"
-      icon_template: "mdi:sleep"
-      value_template: "{{ states('sensor.laura_phone_sleep_confidence') | int > 90 }}"
-    seb_sleeping:
-      friendly_name: "Seb Sleeping"
-      icon_template: "mdi:sleep"
-      value_template: "{{ states('sensor.seb_phone_sleep_confidence') | int > 90 }}"
-
-####################################
 # Bayesian Sensors
 ####################################
 # Bathroom
@@ -52,6 +15,11 @@
       to_state: "on"
     - platform: "state"
       entity_id: "binary_sensor.bathroom_multisensor_motion"
+      prob_given_true: 0.6720
+      prob_given_false: 0.0531
+      to_state: "on"
+    - platform: "state"
+      entity_id: "binary_sensor.mot_01_occupancy"
       prob_given_true: 0.6720
       prob_given_false: 0.0531
       to_state: "on"
