--- a/binary_sensors/mqtt.yaml
+++ b/binary_sensors/mqtt.yaml
@@ -14,7 +14,7 @@
 - platform: mqtt
   name: People Entrance
   availability_topic: frigate/available
-  state_topic: frigate/Entrance/person
+  state_topic: "frigate/Area - Entrance/person"
   device_class: motion
   off_delay: 30
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -22,7 +22,7 @@
 - platform: mqtt
   name: People Hall
   availability_topic: frigate/available
-  state_topic: frigate/Hall/person
+  state_topic: "frigate/Area - Hall/person"
   device_class: motion
   off_delay: 30
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -30,7 +30,7 @@
 - platform: mqtt
   name: People Kitchen
   availability_topic: frigate/available
-  state_topic: frigate/Kitchen/person
+  state_topic: "frigate/Area - Kitchen/person"
   device_class: motion
   off_delay: 60
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -38,31 +38,15 @@
 - platform: mqtt
   name: People Lounge
   availability_topic: frigate/available
-  state_topic: frigate/Lounge/person
+  state_topic: "frigate/Area - Lounge/person"
   device_class: motion
   off_delay: 60
   value_template: "{% if value_json > 0 %}ON{% endif %}"
-  
-- platform: mqtt
-  name: People Study
-  availability_topic: frigate/available
-  state_topic: frigate/Study/person
-  device_class: motion
-  off_delay: 30
-  value_template: "{% if value_json > 0 %}ON{% endif %}"
-  
-- platform: mqtt
-  name: People Bedroom
-  availability_topic: frigate/available
-  state_topic: frigate/Bedroom/person
-  device_class: motion
-  off_delay: 30
-  value_template: "{% if value_json > 0 %}ON{% endif %}"
-  
+
 - platform: mqtt
   name: People Stairs
   availability_topic: frigate/available
-  state_topic: frigate/Stairs/person
+  state_topic: "frigate/Area - Stairs/person"
   device_class: motion
   off_delay: 30
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -73,7 +57,7 @@
 - platform: mqtt
   name: Dogs Entrance
   availability_topic: frigate/available
-  state_topic: frigate/Entrance/dog
+  state_topic: "frigate/Area - Entrance/dog"
   device_class: motion
   off_delay: 60
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -81,7 +65,7 @@
 - platform: mqtt
   name: Dogs Hall
   availability_topic: frigate/available
-  state_topic: frigate/Hall/dog
+  state_topic: "frigate/Area - Hall/dog"
   device_class: motion
   off_delay: 60
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -89,7 +73,7 @@
 - platform: mqtt
   name: Dogs Kitchen
   availability_topic: frigate/available
-  state_topic: frigate/Kitchen/dog
+  state_topic: "frigate/Area - Kitchen/dog"
   device_class: motion
   off_delay: 60
   value_template: "{% if value_json > 0 %}ON{% endif %}"
@@ -97,58 +81,15 @@
 - platform: mqtt
   name: Dogs Lounge
   availability_topic: frigate/available
-  state_topic: frigate/Lounge/dog
-  device_class: motion
-  off_delay: 60
-  value_template: "{% if value_json > 0 %}ON{% endif %}"
-  
-- platform: mqtt
-  name: Dogs Study
-  availability_topic: frigate/available
-  state_topic: frigate/Study/dog
-  device_class: motion
-  off_delay: 60
-  value_template: "{% if value_json > 0 %}ON{% endif %}"
-  
-- platform: mqtt
-  name: Dogs Bedroom
-  availability_topic: frigate/available
-  state_topic: frigate/Bedroom/dog
-  device_class: motion
-  off_delay: 60
-  value_template: "{% if value_json > 0 %}ON{% endif %}"
-  
-- platform: mqtt
-  name: Dogs Stairs
-  availability_topic: frigate/available
-  state_topic: frigate/Stairs/dog
+  state_topic: "frigate/Area - Lounge/dog"
   device_class: motion
   off_delay: 60
   value_template: "{% if value_json > 0 %}ON{% endif %}"
 
-# - platform: mqtt
-#   name: Lounge Motion Camera
-#   state_topic: shinobi/home/Lounge/trigger
-#   json_attributes_topic: shinobi/home/Lounge/trigger
-#   device_class: motion
-#   off_delay: 60
-#   value_template: "{% if (as_timestamp(now()) - as_timestamp(value_json.currentTimestamp)) | int > 60  %}OFF{%else%}ON{%endif%}"
-#   json_attributes_template: "{{ {'Confidence': value_json.details.confidence,'Plugin': value_json.details.plug | title,'Last Motion': as_timestamp(strptime(value_json.currentTimestamp, '%Y-%m-%dT%H:%M:%S%z')) | timestamp_local, 'Motion Area': value_json.details.name | replace('_', ' ') | title, 'Timestamp': as_timestamp(value_json.currentTimestamp), 'Since Last Motion': (as_timestamp(now()) - as_timestamp(value_json.currentTimestamp)) | int } | tojson }}"
-  
-# - platform: mqtt
-#   name: Kitchen Motion Camera
-#   state_topic: shinobi/home/Kitchen/trigger
-#   json_attributes_topic: shinobi/home/Kitchen/trigger
-#   device_class: motion
-#   off_delay: 60
-#   value_template: "{% if (as_timestamp(now()) - as_timestamp(value_json.currentTimestamp)) | int > 60  %}OFF{%else%}ON{%endif%}"
-#   json_attributes_template: "{{ {'Confidence': value_json.details.confidence,'Plugin': value_json.details.plug | title,'Last Motion': as_timestamp(strptime(value_json.currentTimestamp, '%Y-%m-%dT%H:%M:%S%z')) | timestamp_local, 'Motion Area': value_json.details.name | replace('_', ' ') | title, 'Timestamp': as_timestamp(value_json.currentTimestamp), 'Since Last Motion': (as_timestamp(now()) - as_timestamp(value_json.currentTimestamp)) | int } | tojson }}"
-  
-# - platform: mqtt
-#   name: Entrance Motion Camera
-#   state_topic: shinobi/home/Entrance/trigger
-#   json_attributes_topic: shinobi/home/Entrance/trigger
-#   device_class: motion
-#   off_delay: 60
-#   value_template: "{% if (as_timestamp(now()) - as_timestamp(value_json.currentTimestamp)) | int > 60  %}OFF{%else%}ON{%endif%}"
-#   json_attributes_template: "{{ {'Confidence': value_json.details.confidence,'Plugin': value_json.details.plug | title,'Last Motion': as_timestamp(strptime(value_json.currentTimestamp, '%Y-%m-%dT%H:%M:%S%z')) | timestamp_local, 'Motion Area': value_json.details.name | replace('_', ' ') | title, 'Timestamp': as_timestamp(value_json.currentTimestamp), 'Since Last Motion': (as_timestamp(now()) - as_timestamp(value_json.currentTimestamp)) | int } | tojson }}"
+- platform: mqtt
+  name: Dogs Stairs
+  availability_topic: frigate/available
+  state_topic: "frigate/Area - Stairs/dog"
+  device_class: motion
+  off_delay: 60
+  value_template: "{% if value_json > 0 %}ON{% endif %}"
