--- a/.gitignore
+++ b/.gitignore
@@ -36,13 +36,17 @@ www/tmp/
 .storage/onboarding
 .storage/person
 .storage/zone
+.storage/gym
 google_calendars.yaml
 .google.token
 .storage/camera
 o365_calendars.yaml
-.O365-token-cache/o365.token
+.O365-token-cache/
 zigbee.db
 zigbee2mqtt/log
 image
 rtsp2webrtc_v4_aarch64
 *.pem
+.google_fit.token
+.storage/.edgeos
+.Seb_google_fit.token
